Updated tools for pdf_to_image and added AI to extract the data.